add double submit token docs
